# trackivity

./: .env.example  .gitignore  AGENTS.md  API_DOCUMENTATION.md  DEVELOPMENT_SETUP.md  QR_SCANNER_ADMIN_GUIDE.md  QR_SYSTEM_DOCUMENTATION.md  README.md  create_admin.sql  create_faculty_admin.sql  create_test_activities.sql  create_test_users.sql  docker-compose.yml  test_fixes.md  test_system.sh
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  HANDLER_USAGE.md  bootstrap-admin.sh  test_prefix_implementation.md
backend/.sqlx/: query-2809da5702196fd20342975ac9252eb7cd86da227eb8be89b3806b618fbd3a89.json  query-3cf8f2797578af60de3b9224b6ce1ce52daef1cab5f15ae218c4917d26cb13ea.json  query-65cf064ea4a9c6974ee4a23c9ba98a8772a614b36db7279d27743f3fd1b0586f.json  query-662fa12d2f0b0fa30fd9fe0e9edbf28ebc41f76597bcf15ab4fa0c1775b52851.json  query-72dbe31a447384da80a5fc59d5ab41abb4fbee5855cce51d0b5486f7d8c0eac8.json  query-c90c095a6bd4d0e9d3b04578ef2f6d7cd819023f6480b4cf3ca22137496fefea.json  query-c95ce8370b5c52ac5f4593d45f3c4287a3cedc885f4ff1db7624a785fa72a176.json
backend/docs/: FACULTY_SCOPE_AUTHORIZATION.md
backend/examples/: faculty_scope_usage.rs
backend/migrations/: 001_initial_schema.sql  002_add_user_prefix.sql  002_seed_data.sql  003_sessions_table.sql  004_faculty_analytics_notifications.sql  005_add_faculty_status.sql  006_add_activity_fields.sql  007_add_activity_hours.sql  007_cleanup_activities_schema.sql  99999999999999_create_default_admin.sql
backend/src/: config.rs  database.rs  main.rs  test_faculty_scope.rs
backend/src/handlers/: admin.rs  (+15 more)
(+152 files in other folders)
