[package]
name = "trackivity"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "tokio", "tower-log"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tower-cookies = "0.11"

# Async runtime
tokio = { version = "1.47", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "bigdecimal"] }

# Redis
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Password hashing
bcrypt = "0.15"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Tracing/Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Security
rand = "0.8"

# Async trait
async-trait = "0.1"

# QR Code generation
qrcode = "0.14"
image = "0.24"

# Base64 encoding/decoding
base64 = "0.21"

# Regular expressions
regex = "1.0"
futures = "0.3.31"
tokio-stream = { version = "0.1.17", features = ["sync"] }

# BigDecimal for precise decimal arithmetic
bigdecimal = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tower-test = "0.4"
